--- a/src/学习/Python/关键字.md
+++ b/src/学习/Python/关键字.md
@@ -1,15 +1,27 @@
 # keyword
 
-显示所有keyword
+1. 显示所有keyword
 
 ```python
 import keyword
 print(keyword.keylist)
 ```
 
-显示所有softkeyword
+2. 显示所有softkeyword
 
 ```python
 import keyword
 print(keyword.softkwlist)
+```
+
+3. 判断字符串是否为keyword
+```python
+import keyword
+print(keyword.iskeyword(str))
+```
+
+4. 判断字符串是否为softkeyword
+```python
+import keyword
+print(keyword.issoftkeyword(str))
 ```
