--- a/src/收集/句子/幸福.md
+++ b/src/收集/句子/幸福.md
@@ -1,3 +1,4 @@
 # 幸福
 
 - 幸福的三大要素是：有要做的事（something to do）、有要爱的人（someone to love）、有寄予希望的东西（something to hope for）。-- 亚历山大·查默斯，19世纪美国著名医生
+- 饿的时候发现牛肉干没吃完，数学最后一题我蒙对了，喜欢的男生看了我一眼，路上的流浪猫蹦蹦跳跳地和我捉迷藏，晾衣服发现了洗湿的纸币，买的两节电池尺寸刚好，学校放了我喜欢的歌，多么简单美好的事。
